added Narendra Singh card

--- a/index.html
+++ b/index.html
@@ -1717,6 +1717,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+         <!-- ________ *TEMPLATE: Narendra Singh START ________  -->
+        <div class="card">
+          <p class="name">Narendra Singh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/narendra0_singh" target="_blank">narendra0_singh</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/niksbanna" target="_blank">niksbanna</a>
+          </p>
+          <p class="about">Hey there! I'm a passionate full stack developer with a keen interest in building scalable web applications. I like to explore new technologies and frameworks to enhance my skill set. I am looking forward to collaborating with other developers and contributing to open source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/news/how-to-think-like-a-programmer-lessons-in-problem-solving-d1d8bf1de7d2" target="_blank" title="How to think like a programmer">How to think like a programmer</a>
+              </li>
+              <li>
+                <a href="https://playcode.io/javascript" target="_blank" title="Javascript Playground">Javascript Playground</a>
+              </li>
+              <li>
+                <a href="https://floatui.com/" target="_blank" title="Best shadcn/ui blocks and componenets">Float UI</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Narendra Singh END ________  -->
+         
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
