--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *MatasBin* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">MatasBin</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/matas-bingelis/" target="_blank">Matas Bingelis</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/matasBin" target="_blank">MatasBin</a>
+          </p>
+          <p class="about">I am a Front-End Dev, learning new things every day</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@WebDevSimplified" target="_blank" title="First Resource">Web Dev Simplified</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@Fireship" target="_blank" title="Second Resource">Fireship</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@coding2go" target="_blank" title="Third resource">Coding2GO</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *MatasBing* Contributor card END ________  -->
+
         <!-- ________ *Ayman Fahd* card START ________  -->
         <div class="card">
           <p class="name">Ayman Fahd</p>
