--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Jay Wong card START ________  -->
+        <div class="card">
+          <p class="name">Jay Wong</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/JayWong001011" target="_blank">Jay Wong</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jaywongX" target="_blank">jaywongX</a>
+          </p>
+          <p class="about">Hello everyone, I'm Jay Wong, an independent developer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.ufreetools.com/" target="_blank">UFreeTools - Your Best Free Tools</a>
+              </li>
+              <li>
+                <a href="https://www.cnblogs.com/" target="_blank">CNBlogs</a>
+              </li>
+              <li>
+                <a href="https://www.v2ex.com/" target="_blank">V2EX</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
