--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ *Jay Wong card START ________  -->
+        <!-- ________ Jay Wong card START ________  -->
         <div class="card">
           <p class="name">Jay Wong</p>
           <p class="contact">
@@ -140,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ Jay Wong card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
