--- a/index.html
+++ b/index.html
@@ -3765,6 +3765,33 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ Divya card START ________  -->
+        <div class="card">
+          <p class="name">Divya Selva</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/divya_selv69345" target="_blank">@divya_selv69345</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Divyaselva14" target="_blank">@Divyaselva14</a>
+          </p>
+          <p class="about">Hello! I am a Data Analyst. I am based in Leeds, UK</p>
+          <div class="resources">
+            <p> Resources I love</p>
+            <ul>
+              <li>
+                <a href="https://github.com/GoogleCloudPlatform/devrel-demos" target="_blank" title="Google Cloud Demo">Google Cloud Demo</a>
+              </li>
+              <li>
+                <a href="https://github.com/huggingface" target="_blank" title="Hugging Face Repo">Hugging Face Repo</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@mrdbourke" target="_blank" title="Pytorch Tutorial">Pytorch Tutorial</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Divya card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
