added contributer card
Added contributor card for 'mohamed' with contact details and resources.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        
         <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
@@ -115,6 +116,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *mataha* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">mohamed</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/mataha1/" target="_blank">Ehtiram</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mataha435" target="_blank">mataha435</a>
+          </p>
+          <p class="about">I'm a senior cs/ds student just trying to find my way in the tech world.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://csvistool.com/" target="_blank" title="csvistool">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://cdecl.org/" target="_blank" title="cdecl">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://exercism.org/" target="_blank" title="exercism">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *mataha* card END ________  -->
         <!-- ________ Jay Wong card START ________  -->
         <div class="card">
           <p class="name">Jay Wong</p>
