--- a/index.html
+++ b/index.html
@@ -3792,6 +3792,33 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+         <!-- ________ Tharun Prakash card START ________  -->
+        <div class="card">
+          <p class="name">Tharun Prakash</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Masstamilpasan1?t=bJmZpVq_3CTiVbrgvXeD-A&s=08" target="_blank">Tharun</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/tharun694" target="_blank">Tharun Prakash</a>
+          </p>
+          <p class="about">Hello everyone, I'm Tharun Prakash, a Software Developer learning cutting edge technologies.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://web.dev/" target="_blank">Web.dev - Your Best Free Tools</a>
+              </li>
+              <li>
+                <a href="https://developers.google.com/" target="_blank">Google web</a>
+              </li>
+              <li>
+                <a href="https://developer.microsoft.com/en-us/" target="_blank">Microsoft Web Tool</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Tharun prakash card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
