--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Masiha's card START ________  -->
+        <div class="card">
+          <p class="name">Masiha Nomi</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Sir-Masiha-N" target="_blank">Sir-Masiha-N</a>
+          </p>
+          <p class="about">Entering the world of GitHub. Interested in all sorts of programming (mostly desktop and web).
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="geeksforgeeks.org" target="_blank" title="A good refrence for beginners and professionals">GeeksForGeeks</a>
+              </li>
+              <li>
+                <a href="libgen.li" target="_blank" title="Filled with books, including the ones for programming">Library Genesis</a>
+              </li>
+              <li>
+                <a href="www.thegreatcoursesplus.com" target="_blank" title="Has some good programming courses, however, not for free">The Great Courses</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Masiha's card END ________  -->
+
         <!-- ________ Jay Wong card START ________  -->
         <div class="card">
           <p class="name">Jay Wong</p>
