--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                 <!-- ________ Tharun Prakash card START ________  -->
+<div class="card">
+          <p class="name">Tharun Prakash</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Masstamilpasan1?t=bJmZpVq_3CTiVbrgvXeD-A&s=08" target="_blank">Twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/tharun694" target="_blank">GitHub</a>
+          </p>
+          <p class="about">Hello everyone, I'm Tharun Prakash, a Software developer learning cutting edge technologies.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href=https://github.com/iamismile/web-dev-resources target="_blank">GitHub - Your Best Free Tools</a>
+              </li>
+              <li>
+                <a href=https://web.dev/ target="_blank">WebDev</a>
+              </li>
+              <li>
+                <a href="https://dev.to/swirl/24-best-resources-for-web-developers-html-css-javascript--2hog" target="_blank">Dev Community</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Tharun Prakash card END ________  -->
+
         <!-- ________ Jay Wong card START ________  -->
         <div class="card">
           <p class="name">Jay Wong</p>
