--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href=https://github.com/iamismile/web-dev-resources target="_blank">GitHub - Your Best Free Tools</a>
+                <a href="https://github.com/iamismile/web-dev-resources" target="_blank">GitHub - Your Best Free Tools</a>
               </li>
               <li>
-                <a href=https://web.dev/ target="_blank">WebDev</a>
+                <a href="https://web.dev/" target="_blank">WebDev</a>
               </li>
               <li>
                 <a href="https://dev.to/swirl/24-best-resources-for-web-developers-html-css-javascript--2hog" target="_blank">Dev Community</a>
