--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Rahul Kumar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/rahul-kumar" target="_blank">Rahul</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/rahul-kumar" target="_blank">Rahul</a>
+          </p>
+          <p class="about">Hello I am a developer , I want to do open source contribution</p>
+          <div class="resources">
+            <p>3 Useful CP Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.leetcode.com" target="_blank" title="First Resource">Leetcode</a>
+              </li>
+              <li>
+                <a href="https://www.codechef.com/" target="_blank" title="Second Resource">Codechef</a>
+              </li>
+              <li>
+                <a href="https://codeforces.com/" target="_blank" title="Third resource">Codeforces</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ Tharun Prakash card START ________  -->
         <div class="card">
           <p class="name">Tharun Prakash</p>
