--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <!-- ________ Rahul's card START ________  -->
         <div class="card">
           <p class="name">Rahul Kumar</p>
           <p class="contact">
@@ -140,8 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        <!-- ________ Rahul's card END ________  -->
 
         <!-- ________ Tharun Prakash card START ________  -->
         <div class="card">
