Igor's card added

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                <!-- ________ *Igor* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Igor</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <!-- <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a> -->
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/IgorMedeirox" target="_blank">IgorMedeirox</a>
+          </p>
+          <p class="about">A future developer under construction</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.typescriptlang.org/" target="_blank" title="First Resource">TypeScript Docs</a>
+              </li>
+              <li>
+                <a href="https://www.javascript.com/" target="_blank" title="Second Resource">JavaScript Docs</a>
+              </li>
+              <li>
+                <a href="https://react.dev/" target="_blank" title="Third resource">React Docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Igor* Contributor card END ________  -->
+
         <!-- ________ Narendra Singh START ________  -->
         <div class="card">
           <p class="name">Narendra Singh</p>
