Add Harpreet Kaur contributor card

--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+ <!-- ________ *Harpreet* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Harpreet Kaur</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.linkedin.com/in/harpreet-kaur-0a387b18b/" target="_blank">LinkedIn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/HarpreetKaur01" target="_blank">Github</a>
+          </p>
+          <p class="about">Hi, I'm a Web developer enjoys building responsive, user-friendly websites and eLearning solutions. I specialize in HTML, CSS, JavaScript, React, and accessibility.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksforGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Harpreet* Contributor card END ________  -->
         <!-- ________ *Igor* Contributor card START ________  -->
         <div class="card">
           <p class="name">Igor</p>
