--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
         <div class="card">
           <p class="name">Luiz Fernando</p>
           <p class="contact">
-            <a href="https://www.github.com/lfbyte" target="_blank">Lfbyte</a>
+            
+            <i class="fab fa-github"></i>
+             <a href="https://www.github.com/lfbyte" target="_blank">Lfbyte</a>
+           
           </p>
           <p class="about">Full Stack - Web Developer</p>
           <div class="resources">
