--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <a href="https://convertio.co/pt/png-ico/" target="_blank" title="First resource">Convertio</a>
               </li>
               <li>
-                <a href="https://coolors.co/" target="_blank" title="Seconde resource">Colors - Pallete Colors Generator</a>
+                <a href="https://coolors.co/" target="_blank" title="Second resource">Colors - Pallete Colors Generator</a>
               </li>
               <li>
                 <a href="https://caniuse.com/" target="_blank" title="Third resource">Can i use</a>
