Fixed doctype typo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -140,7 +140,9 @@
                 <a href="https://react.dev/" target="_blank" title="React Documentation">React Documentation</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/watch?v=k7o9R6eaSes" target="_blank" title="NextJS Tutorial">Beginner to intermediate tutorial for NextJS</a>
+                <a href="https://www.youtube.com/watch?v=k7o9R6eaSes" target="_blank" title="NextJS Tutorial">
+                  Beginner to intermediate tutorial for NextJS
+                </a>
               </li>
             </ul>
           </div>
