Add Kaivalya's contributor card to index.html

--- a/index.html
+++ b/index.html
@@ -149,6 +149,36 @@
         </div>
         <!-- ________ *Viraj* Contributor card END ________  -->
 
+        <!-- ________ *Kaivalya* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Kaivalya</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/iragavarapu-kaivalya-91aab930b/" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/champ24-36" target="_blank">Your handle</a>
+          </p>
+          <p class="about">
+            An aspiring researcher interested in artificial intelligence and space technology, focused on 
+            developing practical and data-driven solutions for real-world applications.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.khanacademy.org" target="_blank" title="First Resource">Khan Academy</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/?fl=1" target="_blank" title="Second Resource">Road Maps for all</a>
+              </li>
+              <li>
+                <a href="https://www.kaggle.com/learn" target="_blank" title="Third resource">Kaggle</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Kaivalya* Contributor card END ________  -->
+        
         <!-- ________ *Harpreet* Contributor card START ________  -->
         <div class="card">
           <p class="name">Harpreet Kaur</p>
