--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Varun* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Varun Dantuluri</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/varun_dantuluri" target="_blank">varun_dantuluri</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/VarunVarmaD" target="_blank">VarunVarmaD</a>
+          </p>
+          <p class="about">A computer science student aspiring to become a polymath in the field by actively building skills across diverse topics like DSA, web development, networks, and game design.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="The Odin Project">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://react.dev/" target="_blank" title="React Documentation">React Documentation</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Varun* Contributor card END ________  -->
+
         <!-- ________ *Viraj* Contributor card START ________  -->
         <div class="card">
           <p class="name">Viraj Rahul Gupta</p>
