Kaivalya's card in index.html
Update LinkedIn and GitHub links

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
           <p class="name">Kaivalya</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/iragavarapu-kaivalya-91aab930b/" target="_blank">Your handle</a>
+            <a href="https://www.linkedin.com/in/iragavarapu-kaivalya-91aab930b/" target="_blank">LinkedIn</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/champ24-36" target="_blank">Your handle</a>
+            <a href="https://github.com/champ24-36" target="_blank">Github</a>
           </p>
           <p class="about">
             An aspiring researcher interested in artificial intelligence and space technology, focused on 
