--- a/index.html
+++ b/index.html
@@ -115,6 +115,50 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *mahadyhassanutsho* Contribution card START ________ -->
+        <div class="card">
+          <p class="name">Utsho MH</p>
+          <p class="contact">
+            <i class="fab f-facebook"></i>
+            <a href="https://www.facebook.com/utsho.de.bravestone/" target="_blank">utshodevbravestone</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mahadyhassanutsho" target="_blank">mahadyhassanutsho</a>
+          </p>
+          <p class="about">
+            A web developer and eternal tinkerer who believes great products live at the intersection of logic, design, and chaos.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a 
+                  href="https://css-tricks.com" 
+                  target="_blank" 
+                  title="Articles, tips, and guides on modern CSS, layouts, animations, and frontend craft.">
+                  CSS-Tricks — The Frontend Spellbook
+                </a>
+              </li>
+              <li>
+                <a 
+                  href="https://react.dev/learn" 
+                  target="_blank" 
+                  title="Official React learning materials with interactive examples and explanations.">
+                  React.dev — The Official React Learning Path
+                </a>
+              </li>
+              <li>
+                <a 
+                  href="https://roadmap.sh" 
+                  target="_blank" 
+                  title="Interactive learning paths for developers — Web, React, DevOps, and more.">
+                  Roadmap.sh — Free Developer Roadmaps
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *mahadyhassanutsho* Contribution card END ________ -->
+
         <!-- ________ *Viraj* Contributor card START ________  -->
         <div class="card">
           <p class="name">Viraj Rahul Gupta</p>
