--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="card">
           <p class="name">Utsho MH</p>
           <p class="contact">
-            <i class="fab f-facebook"></i>
+            <i class="fab fa-facebook"></i>
             <a href="https://www.facebook.com/utsho.de.bravestone/" target="_blank">utshodevbravestone</a>
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/mahadyhassanutsho" target="_blank">mahadyhassanutsho</a>
