added new card from spain

--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+        <!-- ________ * acardielf card START ________  -->
+        <div class="card">
+          <p class="name">Ángel C.</p>
+          <p class="contact">
+            <i class="fa-solid fa-ghost"></i>
+            <a href="https://www.github.com/acardielf" target="_blank">acardielf</a>
+          </p>
+          <p class="about">Haciendo una aportación a este proyecto para aprender un poco de Git y GitHub</p>
+          <div class="resources">
+            <p>Puesto de trabajo:</p>
+            <ul>
+              <li>
+                <a href="https://blogsaverroes.juntadeandalucia.es/iesalmunia/" target="_blank" title="IES Almunia">IES Almunia</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ acardielf card END ________  -->        
+
         <!-- ________ *mahadyhassanutsho* Contribution card START ________ -->
         <div class="card">
           <p class="name">Utsho MH</p>
