--- a/index.html
+++ b/index.html
@@ -90,25 +90,20 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Woldroj</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/Woldroj" target="_blank">Woldroj</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">Haciendo una contribucion, estoy en 2ºDAM y se tocar la guitarra electrica. Espero que estén bien</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="github.com/Woldroj" target="_blank" title="First Resource">GitHub</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
-              </li>
-              <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://woldroj.github.io/Practicas/LandingPageRetroWave/Main.html" target="_blank" title="Second Resource">Little Project</a>
               </li>
             </ul>
           </div>
