--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                <!-- ________ *Andreagl31* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Andrea</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/Andrea_gl31" target="_blank">@Andrea_gl31</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/andreagl31" target="_blank">@andreagl31</a>
+          </p>
+          <p class="about">¡Hola! Soy Andrea, estudiante de informática de España intentando practicar y aprender un poco de GitHub.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="w3schools.com">Página web con muchas explicaciones sobre programación.</a>
+              </li>
+              <li>
+                <a href="https://openwebinars.net/" target="_blank" title="openwebinars">Página con múltiples vídeos educativos de programación.</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/es/?srsltid=AfmBOoq_ljRFTCGsJWbjtm70c42LM7Hk_CjqUvh4RzgXyvEE-zYDlKdc" target="_blank" title="Third resource">Udemy-Vídeos de programación.</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *mahadyhassanutsho* Contribution card START ________ -->
         <div class="card">
           <p class="name">Utsho MH</p>
