--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ninja3031</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Aadirajschauhan" target="_blank">Aadirajschauhan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Ninja3031" target="_blank">Ninja3031</a>
+          </p>
+          <p class="about">Hello everyone I'm Aadiraj</p>
+          <div class="resources">
+            <p>3 Useful DSA Resources</p>
+            <ul>
+              <li>
+                <a href="https://takeuforward.org/" target="_blank" title="First Resource">For DSA</a>
+              </li>
+              <li>
+                <a href="https://codeforces.com/" target="_blank" title="Second Resource">For DSA practicing you can refer this</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Third resource">And for interview Practice</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *mahadyhassanutsho* Contribution card START ________ -->
         <div class="card">
           <p class="name">Utsho MH</p>
