--- a/index.html
+++ b/index.html
@@ -4231,6 +4231,32 @@
         <!-- ________ aarifkhan7 card END ________  -->
 
         <!-- ========= END ========= -->
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shrijeet.G.R</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">None</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/1-shrijeetlap-1" target="_blank">1-shrijeetlap-1</a>
+          </p>
+          <p class="about">A software developer, eager to contribute to open-source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/" target="_blank" title="First Resource">GitHub</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Second Resource">Youtube</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Third resource">ChatGPT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
