translated to english

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             <i class="fa-solid fa-ghost"></i>
             <a href="https://www.github.com/acardielf" target="_blank">acardielf</a>
           </p>
-          <p class="about">Haciendo una aportación a este proyecto para aprender un poco de Git y GitHub</p>
+          <p class="about">I'm doing this contribution to teach my students how to collaborate in other projects</p>
           <div class="resources">
-            <p>Puesto de trabajo:</p>
+            <p>About me:</p>
             <ul>
               <li>
                 <a href="https://blogsaverroes.juntadeandalucia.es/iesalmunia/" target="_blank" title="IES Almunia">IES Almunia</a>
