--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Xarzy* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Álex Carpio</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/%C3%A1lex-carpio-6676772a6/">LinkedIn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/xarzy" target="_blank">GitHub</a>
+          </p>
+          <p class="about">I’m a passionate software developer focused on building efficient and scalable solutions, functional, clean, and maintainable code.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="First Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="Second Resource">GitHub</a>
+              </li>
+              <li>
+                <a href="https://regex101.com/" target="_blank" title="Third resource">Regular Expressions</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Xarzy* Contributor card END ________  -->
+
         <!-- ________ *mahadyhassanutsho* Contribution card START ________ -->
         <div class="card">
           <p class="name">Utsho MH</p>
