--- a/index.html
+++ b/index.html
@@ -148,6 +148,33 @@
         </div>
         <!-- ________ *developersuryaa* Contributor card END ________  -->
 
+        <!-- ________ *nivi* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">nivi</p>
+          <p class="contact">
+            <i class="fab fa-x-linkedin"></i>
+            <a href="https://www.linkedin.com/in/cs-nivi/" target="_blank">nivi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/niveditacs03" target="_blank">nivi</a>
+          </p>
+          <p class="about">I like coffee and i like code</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="First Resource">MDN Docs</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" title="Second Resource">Odin project</a>
+              </li>
+              <li>
+                <a href="https://github.com/firstcontributions/first-contributions" target="_blank" title="Third resource">First contributions</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *nivi* Contributor card END ________  -->
+
         <!-- ________ *Xarzy* Contributor card START ________  -->
         <div class="card">
           <p class="name">Álex Carpio</p>
