--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-         <!-- ________ contic5 card START ________  -->
+        <!-- ________ contic5 card START ________  -->
         <div class="card">
           <p class="name">CJ Conti</p>
           <p class="contact">
@@ -139,6 +139,96 @@
           </div>
         </div>
         <!-- ________ contic5 card END ________  -->
+
+        <!-- ________ *developersuryaa Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Surya Prakash Azad/p></p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.youtube.com/@developersuryaa" target="_blank">DeveloperSuryaa</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/developersuryaa" target="_blank">developersuryaa</a>
+          </p>
+          <p class="about">about me</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/developersuryaa/nagrikta-merger" target="_blank" title="First Resource">
+                  Nagrikta Merger
+                </a>
+              </li>
+              <li>
+                <a href="https://developersuryaa.github.io/CodeBikalpa" target="_blank" title="Second Resource">
+                  CodeBikalpa
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/developersuryaa/get-free-.np-domain" target="_blank" title="Third resource">
+                  Free Domain
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *developersuryaa* Contributor card END ________  -->
+
+        <!-- ________ *Xarzy* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Álex Carpio</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/%C3%A1lex-carpio-6676772a6/">LinkedIn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/xarzy" target="_blank">GitHub</a>
+          </p>
+          <p class="about">
+            I’m a passionate software developer focused on building efficient and scalable solutions, functional, clean,
+            and maintainable code.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="First Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="Second Resource">GitHub</a>
+              </li>
+              <li>
+                <a href="https://regex101.com/" target="_blank" title="Third resource">Regular Expressions</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Xarzy* Contributor card END ________  -->
+
+        <!-- ________ *dilleyrd* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Russ Dilley</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/russ-dilley-0b937615/" target="_blank">Russ Dilley</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/dilleyrd" target="_blank">dilleyrd</a>
+          </p>
+          <p class="about">Learning about github.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://skills.github.com/" target="_blank" title="GitHub Skills">GitHub Skills</a>
+              </li>
+              <li>
+                <a href="https://opensource.guide/" target="_blank" title="Open Source Guide">Open Source Guide</a>
+              </li>
+              <li>
+                <a href="https://explainshell.com/" target="_blank" title="explainshell.com">explainshell.com</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *dilleyrd* Contributor card END ________  -->
 
         <!-- ________ *mahadyhassanutsho* Contribution card START ________ -->
         <div class="card">
