--- a/index.html
+++ b/index.html
@@ -4319,7 +4319,32 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
-
+        <!-- ________ YDvlpr card START ________  -->
+        <div class="card">
+          <p class="name">Yohan Pereira da Costa</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ypcmassaruti" target="_blank">@ypcmassaruti</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/YDvlpr" target="_blank">YDvlpr</a>
+          </p>
+          <p class="about">Aspiring Software Developer and Runner. Road to Marathon 2026!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="First Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Second Resource">Roadmap.sh</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN web docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ YDvlpr card END ________  -->
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
