add dnmore's card

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -114,6 +114,38 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
+
+        <!-- ________ *dnmore* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Diana M.</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/dnmore_dev" target="_blank">dnmore_dev</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/dnmore" target="_blank">dnmore</a>
+          </p>
+          <p class="about">
+            Web developer (React & Next.js) with background in GDPR ops & Customer Service, now
+            blending user empathy and attention to detail in Tech. 
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Find coding answers and solutions from the developer community">Stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://caniuse.com/" target="_blank" title="Check browser support for HTML, CSS, and JavaScript features">Can I use</a>
+              </li>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="Discover the latest developer news, trends, and resources">Daily.dev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *dnmore* Contributor card END ________  -->
 
         <!-- ________ *developersuryaa Contributor card START ________  -->
         <div class="card">
