--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+<!-- ________123prasan Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Prasanna M</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/BigBro_577" target="_blank">BigBro_577</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/123prasan" target="_blank">123prasan</a>
+          </p>
+          <p class="about">He My self Prasanna , and i am currently a student persuing B.E. And i am very much curious about DSA and fullStack Dev</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://websocket.org/guides/road-to-websockets/" target="_blank" title="First Resource">Websockets Working</a>
+              </li>
+              <li>
+                <a href="https://devsnap.me/reactjs-books" target="_blank" title="Second Resource">React Books Free</a>
+              </li>
+              <li>
+                <a href="https://github.com/Syknapse/Contribute-To-This-Project?tab=readme-ov-file" target="_blank" title="Third resource">Your First Open Sourse Contribution</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ 123prasan Contributor card END ________  -->
+
         <!-- ________ *developersuryaa Contributor card START ________  -->
         <div class="card">
           <p class="name">Surya Prakash Azad/p></p>
