added my info card and useful resources for the devs

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Muzided* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Muzammil Lone</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Muzided/" target="_blank">Muzided</a>
+          </p>
+          <p class="about">I am a Web-3 dev starting my journey to contribute in opensource projects</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://free-for.dev/" target="_blank" title="First Resource">Free For Dev</a>
+              </li>
+              <li>
+                <a href="https://jsontotable.org/" target="_blank" title="Second Resource">Json To Table</a>
+              </li>
+              <li>
+                <a href="https://apify.com/" target="_blank" title="Third resource">Apify</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *developersuryaa Contributor card START ________  -->
         <div class="card">
           <p class="name">Surya Prakash Azad/p></p>
