nishantraj06 is contributed

--- a/index.html
+++ b/index.html
@@ -114,6 +114,36 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+                         <!-- ________ nishantraj06's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Nishant kumar</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/nishant-kumar-329017229/" target="_blank">Contact me </a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/nishantraj06" target="_blank">Nishant kumar</a>
+          </p>
+          <p class="about">
+            Tech Enthusiast and driven Full Stack software engineer crafting robust and innovative solutions. Proficient
+            in a diverse set of technologies.
+            <a href="https://www.github.in/nishanraj06" target="_blank">https://www.github.in/nishanraj06</a>
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://devpost.com/" target="_blank" title="Dev Post">Active learner</a>
+              </li>
+              <li>
+                <a href="https://dev.to/" target="_blank" title="Dev Community">Dev Community</a>
+              </li>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="Daily Dev">Daily Dev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ nishantraj06's Contributor card END ________  -->
 
         <!-- ________ *Muzided* Contributor card START ________  -->
         <div class="card">
@@ -1842,6 +1872,7 @@
           </div>
         </div>
         <!-- ________ shashi kumar kasturi's Contributor card END ________  -->
+
 
         <!-- ________ CLPDevelopment's Contributor card START ________  -->
         <div class="card">
