--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Reko</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/Reko21470486" target="_blank">reko</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/rekodexe" target="_blank">rekodexe</a>
+          </p>
+          <p class="about">Learning about Github</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@Fireship" target="_blank" title="First Resource">Fireship</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/questions" target="_blank" title="Second Resource">Stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@BroCodez" target="_blank" title="Third resource">Bro Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *Muzided* Contributor card START ________  -->
         <div class="card">
           <p class="name">Muzammil Lone</p>
