Added my contributor card

--- a/index.html
+++ b/index.html
@@ -4398,6 +4398,43 @@
           </div>
         </div>
         <!-- ========= CattusX Card END =========  -->
+         <!-- ========= Mahi Korrapati Card START =========  -->
+         <div class="card">
+           <p class="name">Mahi Korrapati</p>
+           <p class="contact">
+           <i class="fab fa-linkedin"></i>
+           <a href="https://www.linkedin.com/in/mahi-korrapati-a24773369/" target="_blank">
+           Mahi Korrapati
+          </a>
+              <i class="fab fa-github"></i>
+             <a href="https://github.com/Mahi-korrapati" target="_blank">Mahi-korrapati</a>
+             </p>
+
+            <p class="about">Web Dev Learner | Open-Source Beginner</p>
+
+           <div class="resources">
+          <p>3 Useful Dev Resources</p>
+         <ul>
+           <li>
+        <a href="https://developer.mozilla.org/" target="_blank" title="First Resource">
+          MDN Web Docs
+        </a>
+      </li>
+      <li>
+        <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">
+          FreeCodeCamp
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/" target="_blank" title="Third Resource">
+          GitHub (Learn by contributing)
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+      <!-- ========= Mahi Korrapati Card END =========  -->
+
 
         <!-- ________ aarifkhan7 card START ________  -->
         <div class="card">
