--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *kairavb* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Kairav Bhatia</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/kairavb8" target="_blank">kairavb8</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kairavb" target="_blank">kairavb</a>
+          </p>
+          <p class="about">Know more about me on www.kairav.dev</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.reddit.com/" target="_blank" title="First Resource">Reddit</a>
+              </li>
+              <li>
+                <a href="https://devdocs.io/" target="_blank" title="Second Resource">Devdocs io</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@BroCodez" target="_blank" title="Third resource">Bro Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *kairavb* Contributor card END ________  -->
+
         <!-- ________ *Reko* Contributor card START ________  -->
         <div class="card">
           <p class="name">Reko</p>
