Added a new card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Ycamacho card START ________  -->
+        <div class="card">
+          <p class="name">YCamacho</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Y-Camacho" target="_blank">Y-Camacho</a>
+          </p>
+          <p class="about">Hi there, I am a passionate full stack developer, and I'm here to learn how to contribute to this project.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://icon-sets.iconify.design/" target="_blank" title="First Resource">Iconify</a>
+              </li>
+              <li>
+                <a href="https://es.pattern.monster/" target="_blank" title="Second Resource">Patter monster</a>
+              </li>
+              <li>
+                <a href="https://www.codewars.com/" target="_blank" title="Third resource">Codewars</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Ycamacho card END ________  -->
+
         <!-- ________ *Reko* Contributor card START ________  -->
         <div class="card">
           <p class="name">Reko</p>
