--- a/index.html
+++ b/index.html
@@ -4609,6 +4609,43 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+        
+        <!-- ________ Vipul Kumar card START ________  -->
+        <div class="card">
+       <p class="name">Vipul Kumar</p>
+
+       <p class="contact">
+         <i class="fab fa-x-twitter"></i>
+         <a href="https://x.com/rebel_notout" target="_blank">@rebel_notout</a>
+
+         <i class="fab fa-github"></i>
+         <a href="https://github.com/vipul264og" target="_blank">@vipul264og</a>
+       </p>
+
+       <p class="about">Tech enthusiast and CS student exploring web development and AI.</p>
+
+       <div class="resources">
+         <p>3 Useful Dev Resources</p>
+         <ul>
+           <li>
+             <a href="https://developer.mozilla.org/" target="_blank" title="MDN Web Docs">
+               MDN Web Docs
+             </a>
+           </li>
+           <li>
+             <a href="https://www.freecodecamp.org/learn" target="_blank" title="freeCodeCamp Courses">
+               freeCodeCamp Courses
+            </a>
+           </li>
+           <li>
+             <a href="https://roadmap.sh" target="_blank" title="Developer Roadmaps">
+               Developer Roadmaps
+             </a>
+           </li>
+         </ul>
+       </div>
+     </div>
+     <!-- ________ Vipul Kumar card END ________  -->
 
         <!-- ========= END ========= -->
 
