--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+         <!-- ________ Mu_hu001 card START ________  -->
+        <div class="card">
+          <p class="name">Muhamed Hossam</p>
+          <p class="contact">
+          <i class="fab  fa-linkedin"></i>
+            <a href="linkedin.com/in/muhamed-hossam-931674189e" target="_blank">Muhamed_hoss</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/muhamed-hossam2001" target="_blank">Muhamed_hoss</a>
+          </p>
+          <p class="about">An aspiring Full-stack devloper starting my first  open-source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank" title="Second Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="Third resource">The Odin Project</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________  Mu_hu001 card END ________  -->
         <!-- ________ Ycamacho card START ________  -->
         <div class="card">
           <p class="name">YCamacho</p>
