Change the html code and moved after line 117

--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+      <div class="card">
+             <p class="name">Mahi Korrapati</p>
+              <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+               <a href="https://www.linkedin.com/in/mahi-korrapati-a24773369/" target="_blank">Mahi Korrapati</a>
+               <i class="fab fa-github"></i>
+              <a href="https://github.com/Mahi-korrapati" target="_blank">Mahi-korrapati</a>
+             </p>
+              <p class="about">Beginner in Web Development | Learning step by step</p>
+            <div class="resources">
+            <p>3 Useful Dev Resources</p>
+             <ul>
+              <li>
+                <a href="https://developer.mozilla.org/ " target="_blank" title="First Resource">Resource 1</a>
+                 </li>
+                   <li>
+                   <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">Resource 2</a>
+                   </li>
+                    <li>
+             <a href="https://github.com/" target="_blank" title="Third resource">Resource 3</a>
+                 </li>
+                  </ul>
+              </div>
+          </div>
+             <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ YDvlpr card START ________  -->
         <div class="card">
           <p class="name">Yohan Pereira da Costa</p>
@@ -4398,45 +4425,7 @@
           </div>
         </div>
         <!-- ========= CattusX Card END =========  -->
-         <!-- ========= Mahi Korrapati Card START =========  -->
-         <div class="card">
-           <p class="name">Mahi Korrapati</p>
-           <p class="contact">
-           <i class="fab fa-linkedin"></i>
-           <a href="https://www.linkedin.com/in/mahi-korrapati-a24773369/" target="_blank">
-           Mahi Korrapati
-          </a>
-              <i class="fab fa-github"></i>
-             <a href="https://github.com/Mahi-korrapati" target="_blank">Mahi-korrapati</a>
-             </p>
-
-            <p class="about">Web Dev Learner | Open-Source Beginner</p>
-
-           <div class="resources">
-          <p>3 Useful Dev Resources</p>
-         <ul>
-           <li>
-        <a href="https://developer.mozilla.org/" target="_blank" title="First Resource">
-          MDN Web Docs
-        </a>
-      </li>
-      <li>
-        <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">
-          FreeCodeCamp
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/" target="_blank" title="Third Resource">
-          GitHub (Learn by contributing)
-        </a>
-      </li>
-    </ul>
-  </div>
-</div>
-      <!-- ========= Mahi Korrapati Card END =========  -->
-
-
-        <!-- ________ aarifkhan7 card START ________  -->
+         <!-- ________ aarifkhan7 card START ________  -->
         <div class="card">
           <p class="name">Aarif Khan</p>
           <p class="contact">
